--- a/docs/_static/style.css
+++ b/docs/_static/style.css
@@ -42,6 +42,12 @@ dt {
   font-weight: bold;
 }
 
+ul.simple p,
+ol.simple p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 /*
  * Main page heading
  */
